// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space should render correctly with align prop 1`] = `
<div
  class="container direction-horizontal align-end"
  data-qa="Space"
/>
`;

exports[`Space should render correctly with attributes 1`] = `
<div
  class="test-class container direction-horizontal"
  data-qa="Space"
  id="test-id"
/>
`;

exports[`Space should render correctly with children 1`] = `
<div
  class="container direction-horizontal"
  data-qa="Space"
>
  <button
    class="container size-44 color-gray-outlined"
    data-qa="Button"
  >
    <span
      class="text"
    >
      1
    </span>
  </button>
  <button
    class="container size-44 color-gray-outlined"
    data-qa="Button"
  >
    <span
      class="text"
    >
      2
    </span>
  </button>
</div>
`;

exports[`Space should render correctly with direction prop 1`] = `
<div
  class="container direction-vertical"
  data-qa="Space"
/>
`;

exports[`Space should render correctly with inline prop 1`] = `
<div
  class="container direction-horizontal inline"
  data-qa="Space"
/>
`;

exports[`Space should render correctly with justify prop 1`] = `
<div
  class="container direction-horizontal justify-space-between"
  data-qa="Space"
/>
`;

exports[`Space should render correctly with no props 1`] = `
<div
  class="container direction-horizontal"
  data-qa="Space"
/>
`;

exports[`Space should render correctly with size prop 1`] = `
<div
  class="container direction-horizontal"
  data-qa="Space"
  style="column-gap: 24px; row-gap: 24px;"
/>
`;

exports[`Space should render correctly with wrap prop 1`] = `
<div
  class="container direction-horizontal wrap"
  data-qa="Space"
/>
`;
